[all] Increase the error level.
see #86

Signed-off-by: Stéphane Galland <galland@arakhne.org>